--- a/index.html
+++ b/index.html
@@ -10,35 +10,23 @@
     <title>Document</title>
 </head>
 <body>
-<div class="main" id="main">
-    <div class="sidebar">
-        <i class="fa fa-user" style="margin-right:10px;"    ></i>
-        <a >Rohit Bhandari</a>
-        <br>
-        <ul>
-            <li><i class="fa fa-star" style="margin-right:10px;"></i>Important</li>
-            <li><i class="fa fa-align-left" style="margin-right:10px;"></i>Planned</li>
-            <li><i class="fa fa-adjust" style="margin-right:10px;"></i>Tasks</li>
-            <li><i class="fa fa-eye" style="margin-right:10px;"></i>My Day</li>
-        </ul>
-        <ul>
-            <li><i class="fa fa-bars" style="margin-right:10px;"></i>HostelFinder</li>
-            <li><i class="fa fa-bars" style="margin-right:10px;"></i>Meroband</li>
-            <li><i class="fa fa-plus" style="margin-right:10px;"></i>New List</li>
-        </ul>
-    </div>
-    <div class="tasks">
-        <nav aria-label="breadcrumb" style="width: 80%;margin: auto;">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item active" aria-current="page">Home</li>
-            </ol>
-          </nav>
-          
-    </div>
-    <div class="addtaskbtn" data-toggle="modal" data-target="#exampleModal">
+<div class="sidebar">
+    <a href="#" class="todos">MS Todo</a>
+      <a class="active" href="#home"><i class="fa fa-user" style="margin-right:10px;"></i><span class="name">Rohit</span></a>
+      <a href="#news"><i class="fa fa-star" style="margin-right:10px;"></i><span class="name">Important</a>
+      <a href="#contact"><i class="fa fa-plus" style="margin-right:10px;"></i><span class="name">Tasks</span></a>
+      <a href="#about" class="down" style=""><i class="fa fa-eye" style="margin-right:10px;"></i><span class="name">Date</span></a>
+    <span class="todos">
+        <a class="active"><i class="fa fa-user" style="margin-right:10px;"></i>Todo List</a>
+        <a href="#home" ><i class="fa fa-bars" style="margin-right:10px;"></i>Hostelfinder</a>
+        <a href="#news" class="todos"><i class="fa fa-bars" style="margin-right:10px;"></i>Twitter Clone</a>
+    </span>
+</div>
+
+ <div class="addtaskbtn" data-toggle="modal" data-target="#exampleModal">
         +
-    </div>
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+ </div>
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content" style="background-color: #222;">
             <div class="modal-header">
@@ -56,12 +44,24 @@
           </div>
         </div>
       </div>
+<div class="content">
+    <div class="tasks">
+        <nav aria-label="breadcrumb" style="width: 80%;margin: auto;">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item active" aria-current="page">Home</li>
+            </ol>
+          </nav>
+          
+    </div>
 </div>
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-<script src="script.src"></script>
+<script>
+
+</script>
 </body>
 </html>
+
